--- a/package.json
+++ b/package.json
@@ -7,10 +7,18 @@
     "declarations": true
   },
   "dependencies": {
+    "await-stream-ready": "^1.0.1",
     "egg": "^2.28.0",
+    "egg-bcrypt": "^1.1.0",
     "egg-cors": "^2.2.3",
+    "egg-jwt": "^3.1.7",
     "egg-mongoose": "^3.3.0",
-    "egg-scripts": "^2.13.0"
+    "egg-scripts": "^2.13.0",
+    "egg-validate": "^2.0.2",
+    "image-downloader": "^4.0.1",
+    "moment": "^2.29.1",
+    "stream-to-array": "^2.3.0",
+    "stream-wormhole": "^1.1.0"
   },
   "devDependencies": {
     "autod": "^3.1.0",
