--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "egg-jwt": "^3.1.7",
     "egg-mongoose": "^3.3.0",
     "egg-scripts": "^2.13.0",
+    "egg-swagger-doc": "^2.3.2",
     "egg-validate": "^2.0.2",
     "image-downloader": "^4.0.1",
     "moment": "^2.29.1",
